# rust-api-crud

./: Cargo.toml
src/: main.rs
