[package]
name = "test-api"
version = "0.1.0"
authors = ["Carlos Lisandra <carlos.lisandra@logitravel.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
